--- a/package.json
+++ b/package.json
@@ -1,11 +1,19 @@
 {
-    "name": "LibreImport",
-    "version": "1.0.0",
-    "keywords": ["util", "functional", "server", "client", "browser"],
-    "author": "yehster",
-    "contributors": [],
-    "dependencies": {
-        "jquery" : "*",
-        "jsdom" : "*"
-    }
+  "name": "LibreImport",
+  "version": "1.0.0",
+  "keywords": [
+    "util",
+    "functional",
+    "server",
+    "client",
+    "browser"
+  ],
+  "author": "yehster",
+  "contributors": [],
+  "dependencies": {
+    "jquery": "*",
+    "jsdom": "*",
+    "mysql": "*",
+    "request": "*"
+  }
 }
