--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "jsdom": "*",
     "mysql": "*",
     "request": "*",
-    "csv" : "*"
+    "csv" : "*",
+    "cheerio" : "*"
+    ,"node-async-loop" : "*"
   }
 }
